# ucgo

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md  UCGO-MiniApp-RMM-E.xlsx  make-nvcc.sh  profile.sh  profile_nas.sh  regression.sh  regression_10x10x10.txt  regression_2nd_10x10x10.txt  steps.md
misc/: RMM_UCGO-MiniApp.xlsx  build_k.sh  build_nas.sh  k-env  k_gpu.pbs  steps.md  test_k.sh
test/assets/: 13-node.lb8.ugrid  out.vtk  ramp.lb8.ugrid  shock.lb8.ugrid
test/unit/: ArrayTests.cpp  CMakeLists.txt  CompressedRowGraph.cpp  CompressedRowGraphTests.cpp  GasVariableTests.cpp  GridTests.cpp  JacobianTests.cpp  LDFSSFluxTests.cpp  LeastSquaresTests.cpp  PointTests.cpp  SpacesTests.cpp  UnitTestsMain.cpp
test/unit/catch2/: CMakeLists.txt  Catch2Config.cmake
test/unit/doctest/: CMakeLists.txt  VectorStringMaker.h
vul/: CMakeLists.txt  CartBlock.h  Cell.h  CompressedRowGraph.h  CompressedRowGraphTests.h  Decompositions.h  DynamicMatrix.h  Flux.h  Gradients.h  Grid.cpp  Grid.h  Grid.hpp  Macros.h  PerfectGas.h  PhysicalFlux.h  Point.h  Residual.h  Solution.h  Vulcan.h  legal.txt  main.cpp
